[gd_scene load_steps=18 format=3 uid="uid://wh5war4sg88t"]

[ext_resource type="Script" path="res://Interfaces/main_menu.gd" id="1_8ysni"]
[ext_resource type="FontFile" uid="uid://duk3lygtddcxa" path="res://Assets/h_NokiaCellphoneFC.ttf" id="2_0xnj4"]
[ext_resource type="Texture2D" uid="uid://cy7e43ke0g1oj" path="res://Assets/openart/Main_menu.png" id="2_4gyl4"]
[ext_resource type="PackedScene" uid="uid://mvx8icctge75" path="res://Interfaces/options_popup.tscn" id="4_ipd3m"]
[ext_resource type="PackedScene" uid="uid://bhyhkrmr77cos" path="res://Interfaces/controls.tscn" id="5_2aq7j"]

[sub_resource type="Animation" id="Animation_jjchw"]
resource_name = "Fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_3rcvc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m0231"]
_data = {
"Fade_in": SubResource("Animation_jjchw"),
"RESET": SubResource("Animation_3rcvc")
}

[sub_resource type="LabelSettings" id="LabelSettings_wfm8i"]
font = ExtResource("2_0xnj4")
font_size = 12
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="InputEventKey" id="InputEventKey_u61fy"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_ebv74"]
events = [SubResource("InputEventKey_u61fy")]

[sub_resource type="InputEventKey" id="InputEventKey_51w33"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_gca7o"]
events = [SubResource("InputEventKey_51w33")]

[sub_resource type="InputEventKey" id="InputEventKey_asx2u"]
device = -1
keycode = 51
unicode = 51

[sub_resource type="Shortcut" id="Shortcut_lvj6b"]
events = [SubResource("InputEventKey_asx2u")]

[sub_resource type="InputEventKey" id="InputEventKey_4n5n2"]
device = -1
keycode = 52
unicode = 52

[sub_resource type="Shortcut" id="Shortcut_b8ugw"]
events = [SubResource("InputEventKey_4n5n2")]

[node name="Main_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_8ysni")
first_scene = "res://Level/level_movement.tscn"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_4gyl4")
centered = false

[node name="Fade_in" type="AnimationPlayer" parent="."]
autoplay = "Fade_in"
movie_quit_on_finish = true
libraries = {
"": SubResource("AnimationLibrary_m0231")
}

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 256.0
offset_top = 128.0
offset_right = -256.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer2"]
texture_filter = 1
layout_mode = 2
text = "Metroivania template"
label_settings = SubResource("LabelSettings_wfm8i")
horizontal_alignment = 1

[node name="Menu" type="VBoxContainer" parent="VBoxContainer2"]
clip_contents = true
layout_mode = 2

[node name="Start" type="Button" parent="VBoxContainer2/Menu" node_paths=PackedStringArray("shortcut_context")]
texture_filter = 1
layout_mode = 2
tooltip_text = "Inicia una campaña nueva.
Nota: 
Guardar datos en un checkpoint
borrará los datos ya existentes
del ultimo checkpoint."
focus_next = NodePath("../Continue")
shortcut_context = NodePath("..")
theme_override_fonts/font = ExtResource("2_0xnj4")
shortcut = SubResource("Shortcut_ebv74")
text = "Start"

[node name="Continue" type="Button" parent="VBoxContainer2/Menu"]
texture_filter = 1
layout_mode = 2
tooltip_text = "Inicia el juego desde el ultimo checkpoint"
focus_next = NodePath("../Options")
focus_previous = NodePath("../Start")
theme_override_fonts/font = ExtResource("2_0xnj4")
shortcut = SubResource("Shortcut_gca7o")
text = "Continue
"

[node name="Options" type="Button" parent="VBoxContainer2/Menu"]
texture_filter = 1
layout_mode = 2
tooltip_text = "Ajusta las opciones de juego"
focus_next = NodePath("../Exit")
focus_previous = NodePath("../Continue")
theme_override_fonts/font = ExtResource("2_0xnj4")
shortcut = SubResource("Shortcut_lvj6b")
text = "Options"

[node name="Controls" type="Button" parent="VBoxContainer2/Menu"]
texture_filter = 1
layout_mode = 2
tooltip_text = "Ajusta las opciones de juego"
focus_next = NodePath("../Exit")
focus_previous = NodePath("../Continue")
theme_override_fonts/font = ExtResource("2_0xnj4")
shortcut = SubResource("Shortcut_lvj6b")
text = "Controls"

[node name="Exit" type="Button" parent="VBoxContainer2/Menu"]
texture_filter = 1
layout_mode = 2
tooltip_text = "Sale de la aplicación"
focus_previous = NodePath("../Options")
theme_override_fonts/font = ExtResource("2_0xnj4")
shortcut = SubResource("Shortcut_b8ugw")
text = "Exit"

[node name="version" type="Label" parent="VBoxContainer2"]
texture_filter = 1
layout_mode = 2
text = "v 0.1 alpha"
label_settings = SubResource("LabelSettings_wfm8i")
horizontal_alignment = 2

[node name="Options_popup" parent="." instance=ExtResource("4_ipd3m")]
visible = false

[node name="Controls" parent="." instance=ExtResource("5_2aq7j")]

[connection signal="animation_finished" from="Fade_in" to="." method="_on_fade_in_animation_finished"]
[connection signal="pressed" from="VBoxContainer2/Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer2/Menu/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer2/Menu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer2/Menu/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer2/Menu/Exit" to="." method="_on_exit_pressed"]
